Restructure tooltip wrapping logic (still not compatible with TooltipScaleFeature)